Modificación de SistemaService en los métodos de listarCliente y Proveedor